# baudbound

./: .gitignore  .gitmodules  .taurignore  Cargo.toml  README.md  deny.toml  tauri.conf.json
apps/baudbound/: Cargo.toml  README.md  tauri.conf.json  tauri.linux.conf.json  tauri.windows.conf.json
apps/baudbound/capabilities/: coordinate-picker.json  default.json
apps/baudbound/scripts/: generate-release-checksums.mjs  release-assets.mjs  release-assets.test.mjs  release-checksums.mjs  test-linux-package-install.sh  verify-linux-packages-cli.mjs  verify-linux-packages.mjs  verify-release-assets.mjs  verify-release-version.mjs
apps/baudbound/src/: cli.rs  console.rs  desktop_actions.rs  desktop_ui.rs  main.rs  output.rs  paths.rs  secrets.rs  time_format.rs  trigger_monitor.rs  windows_console.rs
apps/baudbound/src/commands/: config.rs  doctor.rs  hotkey.rs  mod.rs  script.rs  secret.rs  settings.rs  status.rs  update.rs
apps/baudbound/src/commands/script/: approval.rs  execution.rs  lifecycle.rs  logs.rs
apps/baudbound/src/desktop_actions/: audio.rs  clipboard.rs  config.rs  dialogs.rs  input.rs  keyboard.rs  mouse.rs  process.rs  screen.rs  tests.rs  windows_desktop.rs
apps/baudbound/src/desktop_actions/input/: state.rs
apps/baudbound/src/desktop_actions/keyboard/: keymap.rs
apps/baudbound/src/desktop_actions/screen_tools/: geometry.rs  mod.rs
apps/baudbound/src/desktop_ui/: active_runs.rs  background.rs  command_guard.rs  desktop_config.rs  history.rs  lifecycle.rs  manual_runs.rs  secret_vault.rs  settings.rs  tests.rs  tools.rs
apps/baudbound/src/desktop_ui/background/: events.rs
apps/baudbound/src/desktop_ui/coordinate_picker/: mod.rs  session.rs
apps/baudbound/src/script_updates/: preparation.rs  review.rs  worker.rs
apps/baudbound/src/service/: activity.rs  control.rs  dispatch.rs  executor.rs  executor_tests.rs  heartbeat.rs  idle.rs  ipc.rs  mod.rs  options.rs  preflight.rs  runtime.rs  status.rs  summary.rs  triggers.rs  webhooks.rs
apps/baudbound/src/service/webhooks/: http.rs  tests.rs
apps/baudbound/src/updates/: mod.rs
apps/baudbound/tests/: cli_desktop.rs  cli_lifecycle.rs
apps/baudbound/ui/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
apps/baudbound/ui/src/: app.tsx  main.tsx  styles.css
apps/baudbound/ui/src/components/: app-update-dialog.tsx  code-block.tsx  confirm-dialog.tsx  dashboard-load-state.tsx  external-link.tsx  lazy-markdown-content.tsx  markdown-content.tsx  pagination-controls.tsx  status-summary-card.test.tsx  status-summary-card.tsx  toml-code-editor.tsx
apps/baudbound/ui/src/hooks/: use-app-updater.ts  use-trigger-monitor.ts
apps/baudbound/ui/src/lib/: active-run-events.ts  app-types.ts  approval-review.test.ts  approval-review.ts  bounded-concurrency.test.ts  context-menu.test.ts  context-menu.ts  external-url.test.ts  external-url.ts  input-limits.ts  navigation.test.ts  navigation.ts  run-inspection.test.ts  run-inspection.ts  runner-api.ts  script-problems.ts  script-run-control.test.ts  script-run-control.ts  service-health.ts  status-format.ts  table-sorting.test.ts  time-format.tsx  trigger-monitor-events.ts  update-policy.test.ts  update-policy.ts  update-progress.test.ts  update-progress.ts
apps/baudbound/ui/src/views/: about-view.tsx  active-runs-panel.test.tsx  config-view.tsx  configuration-preferences.test.tsx  dashboard-view.tsx  (+27 more)
apps/runner-cli/: Cargo.toml  README.md
apps/runner-cli/src/: main.rs
apps/runner-desktop/: Cargo.toml  README.md
apps/runner-desktop/src/: main.rs
crates/baudbound-actions/: Cargo.toml  README.md
crates/baudbound-actions/src/: lib.rs  limits.rs  tests.rs
crates/baudbound-actions/src/actions/: bounded_io.rs  files.rs  mod.rs  network.rs  process.rs  serial.rs  system.rs  text.rs  url.rs
crates/baudbound-actions/src/tests/: file_actions.rs  http_action.rs  process_actions.rs  text_format.rs  url_parse.rs
crates/baudbound-core/: Cargo.toml  README.md
crates/baudbound-core/src/: compatibility.rs  config.rs  execution_queue.rs  lib.rs  package.rs  run_records.rs  runtime_state.rs  secrets.rs  serial.rs  status.rs  sub_script.rs  tests.rs  triggers.rs  version.rs
crates/baudbound-core/src/tests/: sub_script.rs
crates/baudbound-runtime/: Cargo.toml  README.md
crates/baudbound-runtime/src/: lib.rs  tests.rs
crates/baudbound-runtime/src/execution/: action_dispatch.rs  api.rs  branching.rs  contracts.rs  default_variables.rs  frames.rs  http_diagnostics.rs  initial_state.rs  mod.rs  redaction.rs  variable_operations.rs
crates/baudbound-runtime/src/runtime/: calculation.rs  cancellation.rs  conditions.rs  config.rs  control.rs  duration.rs  graph.rs  http_body.rs  mod.rs  state.rs  templates.rs  variables.rs
crates/baudbound-runtime/src/tests/: calculation_matrix.rs  cancellation.rs  control_flow_matrix.rs  state.rs  variable_operations.rs
crates/baudbound-script/: Cargo.toml  README.md  build.rs
crates/baudbound-script/contracts/: color-match-cases.json  condition-equality-cases.json  node-numeric-fields.json  node-ports.json  windows-keyboard-keys.json
crates/baudbound-script/src/: color_match.rs  lib.rs  package.rs  repository.rs  types.rs  update.rs
crates/baudbound-script/src/package/: color_match.rs  graph.rs  limits.rs  manifest.rs  numeric.rs  schema.rs
crates/baudbound-security/: Cargo.toml  README.md
crates/baudbound-security/contracts/: node-capabilities.json  node-permissions.json
crates/baudbound-security/src/: capabilities.rs  lib.rs  tests.rs
crates/baudbound-security/src/tests/: abuse_cases.rs  capabilities.rs
crates/baudbound-storage/: Cargo.toml  README.md
crates/baudbound-storage/src/: lib.rs  tests.rs
crates/baudbound-storage/src/storage/: approvals.rs  filesystem.rs  metadata.rs  mod.rs  runs.rs  service_control.rs
crates/baudbound-triggers/: Cargo.toml  README.md
crates/baudbound-triggers/src/: lib.rs  tests.rs
crates/baudbound-triggers/src/services/: file_watch.rs  hotkey.rs  mod.rs  process_started.rs  schedule.rs  serial_input.rs  startup.rs  webhook.rs  websocket.rs
(+572 files in other folders)
