[workspace]
members = [
	"apps/baudbound",
	"crates/baudbound-actions",
	"crates/baudbound-core",
	"crates/baudbound-runtime",
	"crates/baudbound-script",
	"crates/baudbound-security",
	"crates/baudbound-storage",
	"crates/baudbound-triggers",
]
resolver = "3"

[workspace.package]
authors = ["BaudBound"]
edition = "2024"
license = "PolyForm-Noncommercial-1.0.0"
repository = "https://github.com/NATroutter/BaudBound"
rust-version = "1.95"
version = "2.0.0"

[workspace.dependencies]
anyhow = "1.0.100"
command-group = "5.0.1"
base64 = "0.22.1"
chacha20poly1305 = { version = "0.11.0", features = ["zeroize"] }
chrono = { version = "0.4.45", default-features = false, features = ["clock"] }
clap = { version = "4.5.50", features = ["derive"] }
ctrlc = "3.5.1"
getrandom = "0.4.3"
keyring = "4.1.4"
jsonschema = { version = "0.47.0", default-features = false }
notify = "8.2.0"
notify-debouncer-full = { version = "0.7.0", default-features = false }
regex = "1.13.0"
rpassword = "7.5.4"
reqwest = { version = "0.12.26", default-features = false, features = ["blocking", "rustls-tls"] }
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serialport = "4.8.1"
sha2 = "0.11.0"
sysinfo = "0.39.6"
tempfile = "3.23.0"
thiserror = "2.0.17"
tiny_http = "0.12.0"
toml = "1.1.2"
toml_edit = "0.25.12"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
tungstenite = "0.30.0"
urlencoding = "2.1.3"
zip = "8.6.0"
zeroize = { version = "1.9.0", features = ["derive"] }
