[workspace]
members = [
	".",
	"crates/baudbound-actions",
	"crates/baudbound-core",
	"crates/baudbound-runtime",
	"crates/baudbound-script",
	"crates/baudbound-security",
	"crates/baudbound-storage",
	"crates/baudbound-triggers",
]
resolver = "3"

[workspace.package]
authors = ["BaudBound"]
edition = "2024"
license = "PolyForm-Noncommercial-1.0.0"
repository = "https://github.com/BaudBound/baudbound"
rust-version = "1.95"
version = "2.0.0"

[workspace.dependencies]
anyhow = "1.0.100"
command-group = "5.0.1"
base64 = "0.22.1"
chacha20poly1305 = { version = "0.11.0", features = ["zeroize"] }
chrono = { version = "0.4.45", default-features = false, features = ["clock"] }
clap = { version = "4.5.50", features = ["derive"] }
ctrlc = "3.5.1"
getrandom = "0.4.3"
keyring = "4.1.4"
jsonschema = { version = "0.48.1", default-features = false }
notify = "8.2.0"
notify-debouncer-full = { version = "0.7.0", default-features = false }
regex = "1.13.0"
rpassword = "7.5.4"
reqwest = { version = "0.12.26", default-features = false, features = ["blocking", "brotli", "deflate", "gzip", "rustls-tls", "zstd"] }
ryu-js = "1.0.3"
semver = "1.0.27"
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serialport = "4.8.1"
sha2 = "0.11.0"
sysinfo = "0.39.6"
tempfile = "3.23.0"
thiserror = "2.0.17"
tiny_http = "0.12.0"
toml = "1.1.2"
toml_edit = "0.25.12"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
tungstenite = "0.30.0"
url = "2.5.8"
urlencoding = "2.1.3"
zip = "8.6.0"
zeroize = { version = "1.9.0", features = ["derive"] }

[package]
name = "baudbound"
description = "BaudBound runner."
edition.workspace = true
version.workspace = true
authors = ["NATroutter"]
homepage = "https://baudbound.app"
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "baudbound"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
arboard = "3.6.1"
base64.workspace = true
baudbound-actions = { path = "crates/baudbound-actions" }
baudbound-core = { path = "crates/baudbound-core" }
baudbound-runtime = { path = "crates/baudbound-runtime" }
baudbound-script = { path = "crates/baudbound-script" }
baudbound-storage = { path = "crates/baudbound-storage" }
baudbound-triggers = { path = "crates/baudbound-triggers" }
chrono.workspace = true
clap.workspace = true
ctrlc.workspace = true
getrandom.workspace = true
keyring.workspace = true
notify-rust = "4.11.7"
rfd = { version = "0.17.2", default-features = false, features = ["xdg-portal"] }
rpassword.workspace = true
reqwest.workspace = true
rodio = { version = "0.22.2", default-features = false, features = [
	"flac",
	"mp3",
	"mp4",
	"playback",
	"tracing",
	"vorbis",
	"wav",
] }
serde.workspace = true
serde_json.workspace = true
semver.workspace = true
sha2.workspace = true
serialport.workspace = true
tauri = { version = "2.11.5", features = ["image-ico", "tray-icon"] }
tauri-plugin-autostart = "2.5.1"
tauri-plugin-opener = "2.5.3"
tauri-plugin-process = "2.3.1"
tauri-plugin-updater = "2.10.1"
tempfile.workspace = true
thiserror.workspace = true
tiny_http.workspace = true
toml.workspace = true
toml_edit.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
windows-sys = { version = "0.61.2", features = [
	"Win32_Foundation",
	"Win32_Graphics_Dwm",
	"Win32_Graphics_Gdi",
	"Win32_System_Console",
	"Win32_System_Threading",
	"Win32_UI_HiDpi",
	"Win32_UI_WindowsAndMessaging",
] }
zip.workspace = true

[dev-dependencies]
rusqlite.workspace = true
serde_json.workspace = true
tauri = { version = "2.11.5", features = ["test"] }
tempfile.workspace = true

[target.'cfg(windows)'.dependencies]
enigo = "0.6.1"

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }
