[package]
name = "baudbound"
description = "BaudBound runner."
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "baudbound"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
arboard = "3.6.1"
base64.workspace = true
baudbound-actions = { path = "../../crates/baudbound-actions" }
baudbound-core = { path = "../../crates/baudbound-core" }
baudbound-runtime = { path = "../../crates/baudbound-runtime" }
baudbound-script = { path = "../../crates/baudbound-script" }
baudbound-storage = { path = "../../crates/baudbound-storage" }
baudbound-triggers = { path = "../../crates/baudbound-triggers" }
clap.workspace = true
ctrlc.workspace = true
getrandom.workspace = true
keyring.workspace = true
notify-rust = "4.11.7"
rfd = { version = "0.17.2", default-features = false, features = ["xdg-portal"] }
rpassword.workspace = true
rodio = "0.17.3"
serde.workspace = true
serde_json.workspace = true
serialport.workspace = true
tauri = { version = "2.11.5", features = ["image-ico", "tray-icon"] }
tauri-plugin-process = "2.3.1"
tauri-plugin-updater = "2.10.1"
tempfile.workspace = true
tiny_http.workspace = true
toml.workspace = true
toml_edit.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
windows-sys = { version = "0.61.2", features = [
	"Win32_Foundation",
	"Win32_Graphics_Gdi",
	"Win32_System_Threading",
	"Win32_UI_WindowsAndMessaging",
] }

[dev-dependencies]
rusqlite.workspace = true
serde_json.workspace = true
tauri = { version = "2.11.5", features = ["test"] }
tempfile.workspace = true
zip.workspace = true

[target.'cfg(windows)'.dependencies]
enigo = "0.2.1"

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }
