[package]
name = "baudbound-runner-cli"
description = "BaudBound command-line runner."
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "baudbound"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
baudbound-core = { path = "../../crates/baudbound-core" }
baudbound-storage = { path = "../../crates/baudbound-storage" }
baudbound-triggers = { path = "../../crates/baudbound-triggers" }
clap.workspace = true
serde_json.workspace = true
tiny_http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
