[package]
name = "baudbound-runner-desktop"
description = "BaudBound desktop runner shell."
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "baudbound-desktop"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
baudbound-core = { path = "../../crates/baudbound-core" }
tracing.workspace = true
tracing-subscriber.workspace = true
