[package]
name = "baudbound-actions"
description = "BaudBound runner action adapter traits."
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
baudbound-runtime = { path = "../baudbound-runtime" }
base64.workspace = true
command-group.workspace = true
regex.workspace = true
reqwest.workspace = true
serde_json.workspace = true
serialport.workspace = true
sysinfo.workspace = true
tempfile.workspace = true
thiserror.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_Storage_FileSystem"] }
