[package]
name = "baudbound-core"
description = "BaudBound runner orchestration core."
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
baudbound-actions = { path = "../baudbound-actions" }
baudbound-runtime = { path = "../baudbound-runtime" }
baudbound-script = { path = "../baudbound-script" }
baudbound-security = { path = "../baudbound-security" }
baudbound-storage = { path = "../baudbound-storage" }
baudbound-triggers = { path = "../baudbound-triggers" }
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
thiserror.workspace = true
toml.workspace = true
tracing.workspace = true

[dev-dependencies]
zip.workspace = true
