[package]
name = "baudbound-script"
description = "BaudBound script package and language model."
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
chrono.workspace = true
jsonschema.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
url.workspace = true
zip.workspace = true

[build-dependencies]
serde_json.workspace = true
