[package]
name = "baudbound-storage"
description = "BaudBound runner storage abstractions."
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
base64.workspace = true
chacha20poly1305.workspace = true
getrandom.workspace = true
serde.workspace = true
serde_json.workspace = true
rusqlite.workspace = true
sha2.workspace = true
thiserror.workspace = true
zeroize.workspace = true

[dev-dependencies]
tempfile.workspace = true
