[package]
name = "baudbound-triggers"
description = "BaudBound runner trigger adapter traits."
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
baudbound-runtime = { path = "../baudbound-runtime" }
notify.workspace = true
serde.workspace = true
serde_json.workspace = true
serialport.workspace = true
thiserror.workspace = true
tracing.workspace = true
urlencoding.workspace = true
