[package]
name = "baudbound-triggers"
description = "BaudBound runner trigger adapter traits."
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
baudbound-actions = { path = "../baudbound-actions" }
baudbound-runtime = { path = "../baudbound-runtime" }
notify.workspace = true
notify-debouncer-full.workspace = true
serde.workspace = true
serde_json.workspace = true
serialport.workspace = true
sysinfo.workspace = true
thiserror.workspace = true
tracing.workspace = true
tungstenite.workspace = true
urlencoding.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = [
	"Win32_Foundation",
	"Win32_System_LibraryLoader",
	"Win32_System_Threading",
	"Win32_UI_Input_KeyboardAndMouse",
	"Win32_UI_WindowsAndMessaging",
] }

[dev-dependencies]
tempfile.workspace = true
